fix(css): remove overflow hidden on root

--- a/app/globals.css
+++ b/app/globals.css
@@ -84,10 +84,10 @@
   }
 
   html {
-    @apply w-full h-full m-0 overflow-hidden
+    @apply w-full h-full m-0;
   }
   body {
-    @apply w-full h-full m-0 overflow-hidden bg-background text-foreground;
+    @apply w-full h-full m-0  bg-background text-foreground;
     cursor: none !important;
   }
 }
